# type-infer

./: .travis.yml  LICENSE  Misc.v  Term.v  TypeSafety.v  Types.v  Typing.v  coq-type-infer.opam  dune-project
theories/: Term.v  TypeSafety.v  Typing.v  Util.v  dune
